# FaceRay

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
faceray/: __init__.py  app.py  requirements-dev.txt  requirements-gpu.txt  requirements.txt  sidecar_entry.py
faceray/core/: __init__.py  modifier.py  relighter.py  tracker.py
faceray/drivers/: __init__.py  preview_server.py  virtual_sink.py
scripts/: build_sidecar.sh  capture_selfcheck.py
src/: ipc.ts  main.ts  styles.css  ui.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs  sidecar.rs
tests/: conftest.py  test_modifier.py  test_relighter.py  test_sidecar.py
